Overview of changes in gnome-calculator 49.beta
    * Updated translations
    * Don't use development vala API #490 (Robert Roth)
    * Fix buttons 10^x and 2^x button behaviour !384 (fcusr)
    * Fixed base conversion !385 (fcusr)
    * Port to AdwShortcutsDialog !386 (Automeris Naranja)
    * Support floating point for bit field #457 !387  (fcusr)
    * Only allow entering numbers in financial dialogs !391 (fcusr)
    * Added Sri Lanka Rupees to supported currencies #491 (Robert Roth)
    * Added dialog to show conversion rate download date and source !394 #57 #386 (fcusr)
    * Added all UN treasury supported currencies !397 (Alessandro Astone)
    * Added categories to function popover !396 (fcusr)
    * Fixed electron volts conversion !398 (fcusr)
    * Added function for endianness swap (fcusr)
    * Make bit shift repeatable (fcusr)
    * Enhancements for logarithm function handling (fcusr)
    * Show error when function arguments length is incorrect (fcusr)
    * Fixed unit conversion not working inside functions #369 (fcusr)
    * Fixed incorrect display for complex numbers in some cases (fcusr)
    * Added a redo button to the header bar (fcusr)
    * Ported UI to Blueprint (fcusr)
    * Fixed history item focusing on click #473 (fcusr)
    * Search provider improvements #404 #257 (fcusr)
    * Improved decimal handling on command line (fcusr)
    * Added support for special cut/copy/paste keyboard shortcuts #183 (fcusr)

Overview of changes in gnome-calculator 49.alpha
    * Updated translations
    * Allow input and output of sexagesimal (DMS) values #12 !292 !320 (fcusr)
    * Improved error handling for trigonometric functions #61 #375 (fcusr)
    * Added support for permutation and combination #87 (fcusr)
    * Added support for arbitrary root function #88 (Robert Roth)
    * Added support for greatest common divisor and least common multiplier #89 (fcusr)
    * Improved log function handling #92 (Robert Roth)