@@ -95,6 +95,20 @@
   <launchable type="desktop-id">@app_id@.desktop</launchable>
   <content_rating type="oars-1.1" />
   <releases>
+    <release version="49~rc" date="2025-08-30" type="development">
+      <description>
+        <ul>
+          <li>Updated translations</li>
+          <li>Function handling fixes (fcusr)</li>
+          <li>Only allow 2 to 16 number bases #37 (fcusr)</li>
+          <li>Improve very large number handling performance #377 (fcusr)</li>
+          <li>Fixed Planck constant name typo (Anders Jonsson)</li>
+          <li>Ignore case in auto-complete (fcusr)</li>
+          <li>Fixed keyboard shortcut for preferences dialog (fcusr)</li>
+          <li>Bits panel enhancements (fcusr)</li>
+        </ul>
+      </description>
+    </release>
     <release version="49~beta" date="2025-08-02" type="development">
       <description>
         <ul>
