@@ -1,3 +1,13 @@
+Overview of changes in gnome-calculator 49.rc
+    * Updated translations
+    * Function handling fixes (fcusr)
+    * Only allow 2 to 16 number bases #37 (fcusr)
+    * Improve very large number handling performance #377 (fcusr)
+    * Fixed Planck constant name typo (Anders Jonsson)
+    * Ignore case in auto-complete (fcusr)
+    * Fixed keyboard shortcut for preferences dialog (fcusr)
+    * Bits panel enhancements (fcusr)
+
 Overview of changes in gnome-calculator 49.beta
     * Updated translations
     * Don't use development vala API #490 (Robert Roth)
